trunk/Archive2/eb/e647e7ace13f37/output
main.cpp:12:20: error: expected ')' before 'startVal'
         Derived(T2 startVal):var(startVal){}
                    ^
main.cpp:14:9: error: 'T2' does not name a type
         T2 var;    
         ^
